--- a/src/index.css
+++ b/src/index.css
@@ -54,14 +54,14 @@
   --sidebar-ring: oklch(0.705 0.015 286.067);
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
