--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+
 /* Base Theme (Light Mode) */
 /* Light Mode */
 :root {
@@ -104,6 +106,7 @@ a:hover {
 
 body {
   margin: 0;
+padding: 0;
   /* display: flex;
   place-items: center; */
   /* min-width: 320px; */
@@ -126,9 +129,9 @@ button {
   /* background-color: #1a1a1a;
   transition: border-color 0.25s; */
 }
-button:hover {
+/* button:hover {
   border-color: #646cff;
-}
+} */
 /* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
